force-app/main/default/objects/HP_Community_Email_Setting__mdt/HP_Community_Email_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HP Community Email Setting</label>
    <pluralLabel>HP Community Email Settings</pluralLabel>
</CustomObject>