force-app/main/default/objects/HP_Community_Email_Setting__mdt/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <label>Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>