force-app/main/default/objects/HP_Community_Email_Setting__mdt/fields/URL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>URL_Prefix__c</fullName>
    <label>URL Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>